Queries and API updates
