# coderd/apidoc/swagger.json
@@ -4826,6 +4826,43 @@
         }
       }
     },
+    "/workspaces/{workspace}/autoupdates": {
+      "put": {
+        "security": [
+          {
+            "CoderSessionToken": []
+          }
+        ],
+        "consumes": ["application/json"],
+        "tags": ["Workspaces"],
+        "summary": "Update workspace automatic updates by ID",
+        "operationId": "update-workspace-automatic-updates-by-id",
+        "parameters": [
+          {
+            "type": "string",
+            "format": "uuid",
+            "description": "Workspace ID",
+            "name": "workspace",
+            "in": "path",
+            "required": true
+          },
+          {
+            "description": "Automatic updates request",
+            "name": "request",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/codersdk.UpdateWorkspaceAutomaticUpdatesRequest"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          }
+        }
+      }
+    },
     "/workspaces/{workspace}/builds": {
       "get": {
         "security": [
@@ -5897,6 +5934,11 @@
         "type": "boolean"
       }
     },
+    "codersdk.AutomaticUpdates": {
+      "type": "string",
+      "enum": ["always", "never"],
+      "x-enum-varnames": ["AutomaticUpdatesAlways", "AutomaticUpdatesNever"]
+    },
     "codersdk.BuildInfoResponse": {
       "type": "object",
       "properties": {
@@ -6320,6 +6362,9 @@
       "type": "object",
       "required": ["name", "template_id"],
       "properties": {
+        "automatic_updates": {
+          "$ref": "#/definitions/codersdk.AutomaticUpdates"
+        },
         "autostart_schedule": {
           "type": "string"
         },
@@ -8346,6 +8391,14 @@
         }
       }
     },
+    "codersdk.UpdateWorkspaceAutomaticUpdatesRequest": {
+      "type": "object",
+      "properties": {
+        "automatic_updates": {
+          "$ref": "#/definitions/codersdk.AutomaticUpdates"
+        }
+      }
+    },
     "codersdk.UpdateWorkspaceAutostartRequest": {
       "type": "object",
       "properties": {
@@ -8468,6 +8521,14 @@
     "codersdk.Workspace": {
       "type": "object",
       "properties": {
+        "automatic_updates": {
+          "enum": ["always", "never"],
+          "allOf": [
+            {
+              "$ref": "#/definitions/codersdk.AutomaticUpdates"
+            }
+          ]
+        },
         "autostart_schedule": {
           "type": "string"
         },
