# coderd/database/modelmethods.go
@@ -317,6 +317,7 @@ func ConvertWorkspaceRows(rows []GetWorkspacesRow) []Workspace {
 			AutostartSchedule: r.AutostartSchedule,
 			Ttl:               r.Ttl,
 			LastUsedAt:        r.LastUsedAt,
+			AutomaticUpdates:  r.AutomaticUpdates,
 		}
 	}
 
